--- a/server/Server/Server.csproj
+++ b/server/Server/Server.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Receipt\" />
+  </ItemGroup>
+
 </Project>
