--- a/server/Server/appsettings.json
+++ b/server/Server/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=PayAndGive.db;"
+    "DefaultConnection": "Server=localhost;Database=PayAndGive;Trusted_Connection=True;"
   },
   "Auth": {
     "Issuer": "authServer",
