--- a/server/AuthOption/Common.csproj
+++ b/server/AuthOption/Common.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFrameworkCore.DataEncryption" Version="3.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.10.2" />
   </ItemGroup>
 
