--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
+    "jspdf": "^2.3.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
