--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "angular-google-charts": "^2.2.2",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "jspdf": "^2.3.1",
